--- a/thesis.bib
+++ b/thesis.bib
@@ -2641,3 +2641,28 @@ for Global Competitiveness},
 	title = {Balancing uptake and selectivity in a copper-based metal{\textendash}organic framework for xenon and krypton separation},
 	journal = {Separation and Purification Technology}
 }
+@article{Deshwal_2021,
+	doi = {10.1039/d1me00093d},
+	url = {https://doi.org/10.1039%2Fd1me00093d},
+	year = 2021,
+	publisher = {Royal Society of Chemistry ({RSC})},
+	volume = {6},
+	number = {12},
+	pages = {1066--1086},
+	author = {Aryan Deshwal and Cory M. Simon and Janardhan Rao Doppa},
+	title = {Bayesian optimization of nanoporous materials},
+	journal = {Mol. Syst. Des. Eng.}
+}
+@article{Glasby_2021,
+	doi = {10.1016/j.patter.2021.100305},
+	url = {https://doi.org/10.1016%2Fj.patter.2021.100305},
+	year = 2021,
+	month = {jul},
+	publisher = {Elsevier {BV}},
+	volume = {2},
+	number = {7},
+	pages = {100305},
+	author = {Lawson T. Glasby and Peyman Z. Moghadam},
+	title = {Hydrogen storage in {MOFs}: Machine learning for finding a needle in a haystack},
+	journal = {Patterns}
+}
